--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
-    "dev": "vite dev", 
+    "dev": "vite dev",
     "build": "vite build"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
   }
 }
