--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
+  },
+  "dependencies": {
+    "tiny-slider": "^2.9.4"
   }
 }
