--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "fs-extra": "^11.3.0",
+    "glob": "^11.0.1",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
   },
   "dependencies": {
+    "path": "^0.12.7",
+    "simple-icons": "^14.4.0",
     "tiny-slider": "^2.9.4"
   }
 }
